--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	}
 	.item img{width: 100%;
 		vertical-align: middle;
+		object-fit: cover;
 	}
 	/*vertical-align圖片下方空間處理*/
 	.item .txt{position: absolute;
